--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -6,6 +6,7 @@
   <script src="/js/axios.min.js"></script>
 <!--  <script src="/js/jquery-3.0.0.js"></script>-->
   <script src="/js/sweetalert2.all.min.js"></script>
+  <script src="/js/jquery-3.0.0.js"></script>
   <!--    调用cookie用的js-->
   <script src="/js/jquery.cookie.js"></script>
   <!--    轻量级css样式-->
