--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -96,7 +96,7 @@
         <p>3.请勿对他人进行辱骂或人身攻击等,文明交流</p>
         <p>4.遇到违规帖子请举报,管理员会进行处理</p>
         <p>5.如果对网站有任何建议请联系站长</p>
-        <p>6.发帖请遵守国家法律法规,禁止发黄赌毒相关</p>
+        <p>6.发帖请遵守国家法律法规,禁止发违法内容</p>
         </div>
     </div>
 </div>
